--- a/android-joke-lib/src/main/res/layout/activity_main_joke.xml
+++ b/android-joke-lib/src/main/res/layout/activity_main_joke.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
-
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -8,7 +7,6 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         tools:context="com.udacity.android_joke_lib.MainActivityJoke">
-
 
         <TextView
             android:id="@+id/tv_label_joke"
@@ -18,6 +16,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:textSize="18sp"
             android:text="@string/joke_label" />
 
         <TextView
@@ -28,7 +27,17 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:textSize="20sp"
+            android:textColor="@android:color/black"
             tools:text="I am a Joke" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:src="@mipmap/ic_dino" />
 
     </LinearLayout>
 </layout>
